# Advent-of-C-

./: CMakeLists.txt  day0.h  day01.cpp  day01.h  day02.cpp  day02.h  day03.cpp  day03.h  day04.cpp  day05.cpp  day05.py  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp
2023/: CMakeLists.txt  day0.h  day03.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day17.cpp  day19.cpp  day22.cpp  day24.cpp  day24.py  day25.cpp
2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  helper.py
day01/: day01.cpp
day02/: day02.cpp
day03/: day03.cpp
day04/: day04.cpp
day05/: day05.cpp
day06/: day06.cpp
day07/: day07.cpp
day08/: day08.cpp
day09/: day09.cpp
day10/: day10.cpp
day11/: day11.cpp
day12/: day12.cpp
day13/: day13.cpp
day14/: day14.cpp
day15/: day15.cpp
day16/: day16.cpp
day17/: day17.cpp
day18/: day18.cpp
day19/: day19.cpp
day20/: day20.cpp
day21/: day21.cpp
day22/: day22.cpp
day23/: day23.cpp
day24/: day24.cpp
