cmake_minimum_required(VERSION 3.25)
project(Advent_of_Cpp)

set(CMAKE_CXX_STANDARD 20)

include_directories(.)

add_executable(day0 day0.cpp)

add_executable(day01 day01/day01.cpp)
add_executable(day02 day02/day02.cpp)
add_executable(day03 day03/day03.cpp)
add_executable(day04 day04/day04.cpp)
add_executable(day05 day05/day05.cpp)
add_executable(day06 day06/day06.cpp)
add_executable(day07 day07.cpp)
add_executable(day08 day08.cpp)
add_executable(day09 day09.cpp)
add_executable(day10 day10.cpp)
add_executable(day11 day11.cpp)
add_executable(day12 day12.cpp)
add_executable(day13 day13.cpp)
add_executable(day14 day14.cpp)
add_executable(day15 day15.cpp)
add_executable(day16 day16.cpp)
add_executable(day17 day17.cpp)
add_executable(day18 day18.cpp)
add_executable(day19 day19.cpp)
add_executable(day20 day20.cpp)
add_executable(day21 day21.cpp)
add_executable(day22 day22.cpp)
add_executable(day23 day23.cpp)
add_executable(day24 day24.cpp)